# funding-rate-arbitrage

./: .gitignore  PLAN.md  config.example.toml  config.live.toml  pyproject.toml
.claude/: ralph-loop.local.md
deploy/: env.example  funding-arb.service
infrastructure/ansible/: cpu_pinning.yml  networking_mesh.yml  ptp.yml  xdp_decapsulator.yml
infrastructure/terraform/: main.tf
src/funding_arb/: __main__.py  aeron_udp.py  affinity.py  alerter.py  backtester.py  backup.py  config.py  database.py  disruptor.py  executor.py  health.py  hft_node.py  ingestion.py  metrics.py  models.py  network_calculus.py  optimizer.py  orchestrator.py  prediction.py  queue_simulator.py  rebalancer.py  risk.py  scanner.py  verification.py
src/funding_arb/brawn/: Cargo.toml
src/funding_arb/brawn/src/: lib.rs  shm_layout.rs
src/funding_arb/deferred/: market_maker.py  raft.py  toxicity.py  tracking.py
src/funding_arb/ebpf/: vxlan_strip.c
tests/: test_alerter.py  test_backtester.py  test_backup.py  test_config.py  test_database.py  test_disruptor.py  test_executor.py  test_health.py  test_ingestion.py  test_main.py  test_market_maker.py  test_metrics.py  test_models.py  test_optimizer.py  test_orchestrator.py  test_prediction.py  test_rebalancer.py  test_risk.py  test_scanner.py  test_toxicity.py  test_verification.py
tests/deferred/: test_aeron_udp.py  test_janitor_stress.py  test_queue_simulator.py  test_raft.py  test_tracking_and_latency.py
