[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funding-rate-arbitrage"
version = "0.1.0"
description = "Funding rate arbitrage system across perpetual futures exchanges"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0",
    "aiohttp>=3.9",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "z3-solver>=4.12",
    "python-telegram-bot>=21.0",
    "prometheus-client>=0.20",
    "cvxpy>=1.8.1",
    "clarabel>=0.11.1",
    "arch>=8.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "ruff>=0.15.5",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.98",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
funding-arb = "funding_arb.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/funding_arb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -x --ignore=tests/deferred"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["funding_arb"]

[tool.coverage.run]
source = ["funding_arb"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
